--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
 		"@mediapipe/camera_utils": "^0.3.1675466862",
 		"@mediapipe/drawing_utils": "^0.3.1675466124",
 		"@mediapipe/hands": "^0.4.1675469240",
+		"@tensorflow/tfjs": "^4.21.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
