--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
 	"license": "ISC",
 	"dependencies": {
 		"@tensorflow/tfjs": "^4.21.0",
+		"axios": "^1.7.7",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"mongodb": "^6.8.1",
+		"mongoose": "^8.6.1",
 		"nodemon": "^2.0.7",
 		"socket.io": "^3.1.1",
 		"socket.io-client": "^4.7.5"
