--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"add": "^2.0.6",
+		"express": "^4.19.2",
+		"i": "^0.3.7",
 		"peerjs": "^1.3.1",
 		"react": "^17.0.1",
 		"react-copy-to-clipboard": "^5.0.3",
